# dsco

./: .gitignore  LICENSE  README.rst  pyproject.toml
docs/: README.rst  index.html
docs_src/: README.rst  conf.py  (+1 more)
dsco/project_template/{{cookiecutter.project_name}}/: .gitignore  README.md  definitions.py  docker-compose.yml  flask_config.ini  flask_run.py  pyproject.toml
dsco/project_template/{{cookiecutter.project_name}}/builder/: Dockerfile_dev  Dockerfile_prod
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/: build_dev_container.yml  build_prod_container.yml  debug.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/filter_plugins/: from_toml.py
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/ca-certificates/tasks/: main.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/data-refresh/files/: data_refresh.conf
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/data-refresh/tasks/: main.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/jupyter-config/files/: custom.js  jupyter.conf  jupyter_notebook_config.py  notebook.json
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/jupyter-config/meta/: main.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/jupyter-config/tasks/: main.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/jupyter-config/vars/: main.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/nginx/files/: default  nginx.conf
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/nginx/tasks/: main.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/nginx/templates/: index.nginx-debian.html
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/nginx/vars/: main.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/os-dev/tasks/: main.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/os-prod/tasks/: main.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/poetry/tasks/: main.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/poetry/vars/: main.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/python-dev/tasks/: main.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/python-prod/meta/: main.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/python-prod/tasks/: main.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/python3-apt/tasks/: main.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/sphinx-config/files/: guzzle.css_t
dsco/project_template/{{cookiecutter.project_name}}/builder/ansible/roles/sphinx-config/tasks/: main.yml
dsco/project_template/{{cookiecutter.project_name}}/builder/cache/: tdsqlmagic-0.18-py3-none-any.whl
dsco/project_template/{{cookiecutter.project_name}}/builder/deploy_template/: cookiecutter.json
dsco/project_template/{{cookiecutter.project_name}}/builder/deploy_template/{{cookiecutter.deploy_directory_name}}/: deploy_module.yaml  deploy_report.yaml
dsco/project_template/{{cookiecutter.project_name}}/docs/: index.html
dsco/project_template/{{cookiecutter.project_name}}/docs/documentation/html/: index.html
dsco/project_template/{{cookiecutter.project_name}}/docs/reports/: Dockerfile
dsco/project_template/{{cookiecutter.project_name}}/docs/reports/html/: index.html
dsco/project_template/{{cookiecutter.project_name}}/docs/reports/source/: conf.py
dsco/project_template/{{cookiecutter.project_name}}/docs_src/documentation/: Makefile  conf.py
dsco/project_template/{{cookiecutter.project_name}}/docs_src/reports/: Makefile
dsco/project_template/{{cookiecutter.project_name}}/landing_page/: index.html
dsco/project_template/{{cookiecutter.project_name}}/reports/: index.rst
dsco/project_template/{{cookiecutter.project_name}}/share/documentation/: Makefile  index.rst
dsco/project_template/{{cookiecutter.project_name}}/share/reports/: reports_template.ipynb
dsco/project_template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py  connection.py  flask_main.py  helpers.py  queries.py  routes.py
dsco/project_template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/dashapp1/: __init__.py
dsco/project_template/{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/sql/: all_test_queries.sql  events.sql
(+169 files in other folders)
