[tool.poetry]
name = "dsco"
version = "0.8.0"
description = ""
authors = ["Aaron Palumbo <aaron.palumbo@teradata.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^5.1"
cookiecutter = "^1.7"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
rope = "^0.14.0"
pylint = "^2.4"
black = "^20.8b1"
doc8 = "^0.8.0"
docutils = "^0.15.2"
sphinx = "^2.2"
sphinx-autobuild = "^0.7.1"
guzzle_sphinx_theme = {git = "https://github.com/guzzle/guzzle_sphinx_theme.git"}
nbsphinx = "^0.8.1"
jupyter = "^1.0.0"

[tool.poetry.scripts]
dsco = "dsco.application:main"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

