[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author }}"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}.0"
pandas = "^1.0.0"
teradataml = "^16.20"
sspipe = "^0.1.6"
sqlparse = "^0.3.0"
pygments = "^2.3"
matplotlib = "^3.1"
plotly = "^4.1"
dash = "^1.3.0"
colorlover = "^0.3.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
jupyter-contrib-nbextensions = "^0.5.1"
qgrid = "^1.1"
tdsqlmagic = {file = "builder/cache/tdsqlmagic-0.18-py3-none-any.whl"}
sphinx = "^2.0"
nbsphinx = "^0.4.2"
guzzle-sphinx-theme = "^0.7.11"
pylint = "^2.3"
black = {version = "^18.3-alpha.0",allow-prereleases = true}
blackcellmagic = "^0.0.2"
doc8 = "^0.8.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
