[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author }}"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}.1"
pandas = "^1.2.0"
teradataml = "^17.0.0"
sspipe = "^0.1.15"
sqlparse = "^0.4.1"
Pygments = "^2.7.4"
matplotlib = "^3.3.3"
plotly = "^4.13.3"
dash = "^1.18.1"
colorlover = "^0.3.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
jupyter-contrib-nbextensions = "^0.5.1"
qgrid = "^1.3.1"
sphinx = "^3.4.3"
nbsphinx = "^0.8.1"
guzzle-sphinx-theme = {git = "https://github.com/guzzle/guzzle_sphinx_theme.git"}
pylint = "^2.6.0"
black = "^20.8b1"
blackcellmagic = "^0.0.2"
doc8 = "^0.8.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
