[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author }}"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}.0"
pandas = "^1.4.2"
sspipe = "^0.1.16"
sqlparse = "^0.4.2"
Pygments = "^2.12.0"
matplotlib = "^3.5.2"
plotly = "^5.8.0"
dash = "^2.4.1"
colorlover = "^0.3.0"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyter-contrib-nbextensions = "^0.5.1"
qgrid = "^1.3.1"
Sphinx = "^4.5.0"
nbsphinx = "^0.8.8"
pylint = "^2.13.8"
doc8 = "^0.11.1"
black = {version = "^21.9b0-alpha.0",allow-prereleases = true}
blackcellmagic = "^0.0.3"
guzzle-sphinx-theme = {git = "https://github.com/guzzle/guzzle_sphinx_theme.git"}

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
